--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.marianarciso.nokiaoauth1.MainActivity">
 
-    <TextView
-        android:id="@+id/TextViewData"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="..."
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
 
     <Button
         android:id="@+id/button"
-        android:layout_width="35dp"
-        android:layout_height="34dp"
-        android:text="G"
-        tools:layout_editor_absoluteX="294dp"
-        tools:layout_editor_absoluteY="461dp" />
-
-    <TextView
-        android:id="@+id/teste"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="-----"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="398dp" />
+        android:text="G"
+        android:layout_marginBottom="110dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
-</android.support.constraint.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/oauthc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="8dp"
+        android:text="Callback" />
+
+
+    <TextView
+        android:id="@+id/consumK"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/oauthc"
+        android:layout_marginTop="34dp"
+        android:text="Consumer Key" />
+
+    <TextView
+        android:id="@+id/noncet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/consumK"
+        android:layout_marginTop="34dp"
+        android:text="Nonce" />
+
+    <TextView
+        android:id="@+id/signat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/noncet"
+        android:layout_marginTop="34dp"
+        android:text="Signature" />
+
+    <TextView
+        android:id="@+id/tempo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/signat"
+        android:layout_marginTop="34dp"
+        android:text="TimeStamp" />
+
+</RelativeLayout>
